@@ -1,6 +1,8 @@
 * flymake.el 0.4.4 (candidate)
   * No longer prompt about running flymake processes when killing buffers.
     (Karl Chen via http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01217.html)
+  * Attempt to prevent MOTD/login message from remote Tramp syntax checks
+    appearing at the end of the buffer being syntax-checked.
 
 * flymake.el 0.4.3 (2011-10-19-20:49)
   * Fix interaction of tramp with flymake-run-in-place set to nil.
